force-app/main/default/objects/CodeAnalysis__c/CodeAnalysis__c.object-meta.xml
<CustomObject>
    <description>This object represents a code analysis report result</description>
    <label>Code Analysis</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Code Analysis Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Analyses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>