force-app/main/default/objects/CodeAnalysis__c/fields/CpdMinimumToken__c.field-meta.xml
<CustomField>
    <fullName>CpdMinimumToken__c</fullName>
    <description>The minimum token length which should be reported as a duplicate.</description>
    <label>CPD Minimum Token</label>
    <length>4</length>
    <type>Text</type>
</CustomField>