force-app/main/default/objects/CodeAnalysis__c/fields/DeploymentDate__c.field-meta.xml
<CustomField>
    <fullName>DeploymentDate__c</fullName>
    <description>Deployment date on the format YYYY-MM-DD</description>
    <externalId>true</externalId>
    <label>Deployment date</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>