force-app/main/default/objects/CodeAnalysis__c/fields/NumberOfDuplicates__c.field-meta.xml
<CustomField>
    <fullName>NumberOfDuplicates__c</fullName>
    <description>Number of files analysed with CPD during the scan</description>
    <label>Number of duplicates found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>