force-app/main/default/objects/CodeAnalysis__c/fields/NumberOfFieldNoDesc__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFieldNoDesc__c</fullName>
    <description>Number of fields without description</description>
    <label>Nb fields without description</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>