force-app/main/default/objects/CodeAnalysis__c/fields/NumberOfFiles__c.field-meta.xml
<CustomField>
    <fullName>NumberOfFiles__c</fullName>
    <description>Number of files analysed during the scan</description>
    <label>Number of files analysed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>