force-app/main/default/objects/CodeAnalysis__c/fields/PmdMinimumPriority__c.field-meta.xml
<CustomField>
    <fullName>PmdMinimumPriority__c</fullName>
    <description>Rule priority threshold used for the report</description>
    <label>PMD Minimum Priority</label>
    <length>1</length>
    <type>Text</type>
</CustomField>