force-app/main/default/objects/CodeAnalysis__c/fields/Priority1__c.field-meta.xml
<CustomField>
    <fullName>Priority1__c</fullName>
    <description>Number of violation in priority 1</description>
    <label>Priority 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>