force-app/main/default/objects/CodeAnalysis__c/fields/Priority2__c.field-meta.xml
<CustomField>
    <fullName>Priority2__c</fullName>
    <description>Number of violation in priority 2</description>
    <label>Priority 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>