force-app/main/default/objects/CodeAnalysis__c/fields/Priority3__c.field-meta.xml
<CustomField>
    <fullName>Priority3__c</fullName>
    <description>Number of violation in priority 3</description>
    <label>Priority 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>