force-app/main/default/objects/CodeAnalysis__c/fields/TokensSum__c.field-meta.xml
<CustomField>
    <fullName>TokensSum__c</fullName>
    <description>Sum of the duplication size in tokens found for one analysis</description>
    <label>Tokens sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>