force-app/main/default/objects/CodeAnalysis__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Version of the tool used to perform the analysis</description>
    <label>Version</label>
    <length>150</length>
    <type>Text</type>
</CustomField>