force-app/main/default/objects/CodeAnalysis__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Version__c</columns>
    <columns>Priority1__c</columns>
    <columns>Priority2__c</columns>
    <columns>Priority3__c</columns>
    <columns>NumberOfDuplicates__c</columns>
    <columns>TokensSum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>